--- a/less/v2/dark/apps.less
+++ b/less/v2/dark/apps.less
@@ -82,6 +82,14 @@
       }
     }
   }
+
+  /* ---------------------------------- */
+  /*  Configuration Sheets              */
+  /* ---------------------------------- */
+
+  &.config-sheet {
+    background: var(--dnd5e-color-dark-gray) url("../../ui/denim075.png");
+  }
 }
 
 /* ---------------------------------- */
